[package]
name = "tagbrain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
dioxus = "0.4.0"
dioxus-liveview = { version = "0.4.0", features = ["axum"] }
dotenvy = "0.15.7"
futures = "0.3.29"
lofty = "0.16.1"
notify = "6.1.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.192"
serde_json = "1.0.108"
strsim = "0.10.0"
tokio = { version = "1.34.0", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"
walkdir = "2.4.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
