[package]
name = "tagbrain"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.29"
lofty = "0.17.0"
notify = "6.1.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.192"
serde_json = "1.0.108"
strsim = "0.10.0"
tokio = { version = "1.34.0", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
] }
toml = "0.8.8"
tracing = "0.1.40"
url = "2.4.1"
walkdir = "2.4.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
] }
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tower-http = { version = "0.4.4", features = ["cors"] }
chrono = "0.4.31"
tonic = "0.10.2"
tonic-web = "0.10.2"
rspc = { version = "0.1.3", features = ["axum"] }
axum = "0.6.20"
