[package]
name = "tagbrain"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
rspc = { git = "https://github.com/specta-rs/rspc", version = "0.4.1", features = [
  "typescript",
] }
tower-http = { version = "0.6.6", features = ["cors"] }

reqwest = { version = "0.12.24", features = [
  "json",
  "rustls-tls",
  "http2",
], default-features = false }

futures = "0.3.29"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
  "signal",
] }
eyre = { version = "0.6.8", features = ["auto-install"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
chrono = "0.4.31"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
] }

serde = "1.0.192"
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"

dotenvy = "0.15.7"
lofty = "0.22.0"
notify = "8.2.0"
strsim = "0.11.0"
toml = "0.9.8"
tracing = "0.1.40"
url = "2.4.1"
walkdir = "2.4.0"
rust-embed = "8.0.0"
mime_guess = "2.0.4"
sanitize-filename = "0.6.0"
rspc-axum = { git = "https://github.com/specta-rs/rspc", version = "0.3.0", features = [
  "ws",
] }
specta = "2.0.0-rc.22"
thiserror = "2.0.17"
